Bug 1177914 - throw a NotSupportedError when running document.importNode on a ShadowRoot or Document. r=wchen

--HG--
extra : rebase_source : c133fba7b8222dd3a89b1ab486269a1639e405ee